# Maze

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md
include/: mainwindow.h  maze.h  maze_builder.h  maze_serializer.h  maze_view.h
misc/: maze.drawio
resources/: mainwindow.ui  resources.qrc
src/: main.cpp  mainwindow.cpp  maze.cpp  maze_builder.cpp  maze_serializer.cpp  maze_view.cpp
tests/: CMakeLists.txt  maze_generate_test.cpp  maze_solve_test.cpp  test.cpp  test.h
